hphp/hack/test/typecheck/const_attribute/class_const_attribute_outside_class.php.exp
ERROR: File "class_const_attribute_outside_class.php", line 3, characters 1-125:
Classes, interfaces, traits and enums may not be declared `__Const` (Parsing[1002])
